--- a/mobile_expo/planer_app/package.json
+++ b/mobile_expo/planer_app/package.json
@@ -16,6 +16,7 @@
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
+    "@react-navigation/stack": "^7.0.18",
     "expo": "~52.0.17",
     "expo-constants": "~17.0.3",
     "expo-image-picker": "~16.0.3",
