--- a/mobile_expo/planer_app/package.json
+++ b/mobile_expo/planer_app/package.json
@@ -35,6 +35,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-star-rating": "^1.1.0",
+    "react-native-star-rating-widget": "^1.9.2",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
