--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,6 +1,9 @@
 name: Python App Quality
 
 on:
+    push:
+        paths:
+          - 'backend/**'
     pull_request:
       branches:  
         - dev
