--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -43,4 +43,4 @@ jobs:
           echo "MINIO_SECURE=false" >> backend/.env
           echo "CORS_ORIGINS=http://localhost,http://localhost:3000" >> backend/.env
       - name: Build the stack
-        run: docker-compose up -d
+        run: docker compose --profile dev up --build
