#129 migrate-backend-to-django-drf: add docker and git ignores

--- a/.gitignore
+++ b/.gitignore
@@ -889,3 +889,6 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api.idea/python,pycharm+all,visualstudiocode,react,reactnative,node
 .idea
+
+./to-delete
+./old_backend
