#129 migrate-backend-to-django-drf: add new docker and backend settings

--- a/.gitignore
+++ b/.gitignore
@@ -890,5 +890,5 @@ Temporary Items
 # End of https://www.toptal.com/developers/gitignore/api.idea/python,pycharm+all,visualstudiocode,react,reactnative,node
 .idea
 
-./to-delete
-./old_backend
+to-delete
+old_backend
