--- a/mobile_expo/planer_app/package.json
+++ b/mobile_expo/planer_app/package.json
@@ -16,6 +16,7 @@
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.0.18",
     "expo": "~52.0.25",
     "expo-constants": "~17.0.4",
@@ -26,6 +27,7 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-config": "^1.5.3",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
