#129 add all files

--- a/.gitignore
+++ b/.gitignore
@@ -890,5 +890,8 @@ Temporary Items
 # End of https://www.toptal.com/developers/gitignore/api.idea/python,pycharm+all,visualstudiocode,react,reactnative,node
 .idea
 
+*/static
+
 to-delete
 old_backend
+.qodo
