--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,12 +7,16 @@ requires-python = ">=3.12"
 dependencies = [
     "boto3>=1.35.97",
     "dj-database-url>=2.3.0",
+    "dj-rest-auth[with-social]>=7.0.1",
+    "django-allauth>=65.1.0",
     "django-cors-headers>=4.6.0",
     "django-storages>=1.14.4",
     "django==4.2",
     "djangorestframework-simplejwt>=5.4.0",
     "djangorestframework>=3.15.2",
+    "pillow>=11.1.0",
     "psycopg2-binary>=2.9.10",
+    "rich>=13.9.4",
 ]
 
 [tool.uv]
