--- a/backend/.env.local
+++ b/backend/.env.local
@@ -1,4 +1,5 @@
-DJANGO_SETTINGS_MODULE=core.settings
+DJANGO_SETTINGS_MODULE=core.settings.development
+ENVIRONMENT=development
 SECRET_KEY=django-insecure-2fa8o$!n1vtvt%2f$hx8yq%$3!4rphp38c)zngvz029f)xsc5!
 DEBUG=1
 ALLOWED_HOSTS=localhost,127.0.0.1
@@ -14,10 +15,8 @@ POSTGRES_PASSWORD=triplane
 POSTGRES_DB=postgres-triplane
 POSTGRES_PORT=5432
 
-MINIO_HOST_URL=localhost:9000
-MINIO_ACCESS_KEY=superuser
-MINIO_SECRET_KEY=superuser
-MINIO_SECURE=False
-MINIO_BUCKET_NAME=files
-
-ENVIRONMENT=development
+STORAGE_ENDPOINT_URL=http://localhost:9000
+STORAGE_ACCESS_KEY=superuser
+STORAGE_SECRET_KEY=superuser
+STORAGE_SECURE=False
+STORAGE_BUCKET_NAME=files
