--- a/mobile_expo/planer_app/package.json
+++ b/mobile_expo/planer_app/package.json
@@ -11,21 +11,23 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.0.6",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "~1.23.1",
     "@react-native-community/slider": "^4.5.5",
-    "@react-native-picker/picker": "^2.10.2",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.0.18",
-    "expo": "~52.0.17",
-    "expo-constants": "~17.0.3",
-    "expo-image-picker": "~16.0.3",
-    "expo-location": "~18.0.3",
+    "expo": "~52.0.25",
+    "expo-constants": "~17.0.4",
+    "expo-image-picker": "~16.0.4",
+    "expo-location": "~18.0.5",
     "expo-maps": "^0.6.1",
-    "expo-status-bar": "~2.0.0",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.6",
     "react-native-config": "^1.5.3",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
@@ -33,7 +35,7 @@
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-star-rating-widget": "^1.9.2",
     "react-navigation": "^5.0.0"
