#129 add test files

--- a/.env.testing.local
+++ b/.env.testing.local
@@ -1,6 +1,6 @@
-DJANGO_SETTINGS_MODULE=core.settings.development
+DJANGO_SETTINGS_MODULE=core.settings.testing
 ENVIRONMENT=development
-SECRET_KEY=local_secret_key
+SECRET_KEY=test_secret_key
 DEBUG=1
 ALLOWED_HOSTS=localhost,127.0.0.1
 
