--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,46 +1,54 @@
-name: Python App Quality
+name: Backend app quality
 
 on:
+    pull_request:
+      branches:
+        - dev
+        - main
+        - master
     push:
         paths:
           - 'backend/**'
-    pull_request:
-      branches:  
-        - dev
-        - main
+        ignore:
+          - ".idea"
+          - ".vscode"
+          - ".qodo"
+          - "mobile_expo/planer_app/**"
 
 jobs:
-  quality:
+  python:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.11]
+        python-version:
+          - "3.11.7"
+    steps:
+      - name: Checkout Code Repository
+        uses: actions/checkout@v4
+      - name: Ser up Python
+        uses: actions/setup-python@v5
+
+  uv:
+    runs-on: ubuntu-latest
+    needs: python
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: "pip"
-          cache-dependency-path: "web/requirements.txt"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+  django:
+    runs-on: ubuntu-latest
+    needs: uv
+    env:
+      UV_PYTHON: ${{ matrix.python-version }}
+    working-directory: ./backend
+    steps:
+      - uses: actions/checkout@v4
+      - dotenv/source:
+          path: .env.development.local
       - name: Install dev dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r backend/requirements.txt
-      - name: Create .env file with fake data
+          uv sync --frozen --no-install-project --group dev
+      - name: Run django project
         run: |
-          echo "POSTGRES_HOST=fake_postgres_host" >> backend/.env
-          echo "POSTGRES_PORT=5432" >> backend/.env
-          echo "POSTGRES_USER=fake_user" >> backend/.env
-          echo "POSTGRES_PASSWORD=fake_password" >> backend/.env
-          echo "POSTGRES_DB=fake_db" >> backend/.env
-          echo "SECRET_KEY=fake_secret_key" >> backend/.env
-          echo "ALGORITHM=HS256" >> backend/.env
-          echo "ACCESS_TOKEN_EXPIRE_MINUTES=30" >> backend/.env
-          echo "MINIO_HOST_URL=fake_minio_host_url" >> backend/.env
-          echo "MINIO_ACCESS_KEY=fake_minio_access_key" >> backend/.env
-          echo "MINIO_SECRET_KEY=fake_minio_secret_key" >> backend/.env
-          echo "MINIO_SECURE=false" >> backend/.env
-          echo "CORS_ORIGINS=http://localhost,http://localhost:3000" >> backend/.env
-      - name: Build the stack
-        run: docker compose --profile dev up --build
+          uv run python manage.py runserver 0.0.0.0:8000
