--- a/backend/docker/django/Dockerfile
+++ b/backend/docker/django/Dockerfile
@@ -34,7 +34,7 @@ COPY pyproject.toml uv.lock /app/
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --frozen --no-install-project
+    uv sync --frozen --no-install-project --no-group test
 
 # Stage 3
 FROM python:3.12-slim AS final
