--- a/backend/docker/test/Dockerfile
+++ b/backend/docker/test/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.12-slim AS builder
 
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
+WORKDIR /app
+
 RUN apt-get update && apt-get install -y \
     libpq-dev \
     gcc \
@@ -16,24 +18,19 @@ RUN apt-get update && apt-get install -y \
 ENV PATH="/root/.local/bin/:$PATH"
 
 FROM builder AS final
-WORKDIR /app
 
-COPY pyproject.toml uv.lock ./
+COPY --from=builder /app /app
+
+COPY pyproject.toml uv.lock /app/
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
     uv sync --frozen --no-install-project --group test
 
-COPY ./src ./src
+COPY ./src /app/src
 
 ENV PYTHONPATH=/app/src
 
-# Make sure we have a shell available
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-    libpq5 \
-    gdal-bin \
-    libgdal32 \
-    && rm -rf /var/lib/apt/lists/*
+WORKDIR /app
 
-CMD ["sh", "-c", "uv run pytest -v"]
+ENTRYPOINT ["sh", "-c", "uv run pytest /app/src/tests"]
